gitops/apps/base/matrix/app/httproute-account.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-account
  namespace: matrix
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - account.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: matrix-stack-matrix-authentication-service
          port: 8080
