gitops/apps/base/matrix/app/httproute-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-admin
  namespace: matrix
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - admin-matrix.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: matrix-stack-element-admin
          port: 8080
