gitops/apps/base/matrix/app/httproute-chat.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-chat
  namespace: matrix
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - chat.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: matrix-stack-element-web
          port: 80
