gitops/apps/base/matrix/app/httproute-matrix.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-synapse
  namespace: matrix
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - matrix.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: matrix-stack-synapse
          port: 8008
