gitops/apps/base/matrix/app/securitypolicy-chat.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-chat
  namespace: matrix
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: matrix-chat
  oidc:
    provider:
      issuer: "https://accounts.google.com"
      authorizationEndpoint: "https://accounts.google.com/o/oauth2/v2/auth?access_type=offline&prompt=consent"
      tokenEndpoint: "https://oauth2.googleapis.com/token"
    clientID: "${GOOGLE_OIDC_CLIENT_ID}"
    clientSecret:
      name: "google-oidc-client-secret"
    redirectURL: "https://chat.scw.sovereigncloudwisdom.eu/oauth2/callback"
    scopes:
      - openid
      - email
    cookieNames:
      idToken: "chat-id-token"
      accessToken: "chat-access-token"
  jwt:
    providers:
      - name: google
        issuer: "https://accounts.google.com"
        audiences:
          - "${GOOGLE_OIDC_CLIENT_ID}"
        remoteJWKS:
          uri: "https://www.googleapis.com/oauth2/v3/certs"
          cacheDuration: "86400s"
        extractFrom:
          cookies:
            - "chat-id-token"
  authorization:
    defaultAction: Deny
    rules:
      - name: allow-nicolas
        action: Allow
        principal:
          jwt:
            provider: google
            claims:
              - name: email
                values:
                  - "lejeune.n@gmail.com"
