gitops/apps/base/matrix/app/well-known-matrix.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: well-known-matrix
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: eg
      sectionName: https-root
  hostnames:
    - sovereigncloudwisdom.eu
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/matrix/client
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: well-known-matrix-client
    - matches:
        - path:
            type: Exact
            value: /.well-known/matrix/server
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: well-known-matrix-server
